# sudoplayer

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  build.gradle.kts  main.py  pyproject.toml  settings.gradle.kts
.github/workflows/: deploy-pages.yml
docs/: eslint.config.js  index.html  package.json  tsconfig.node.json  vite.config.js
docs/src/: App.vue  main.ts  routes.ts  style.css
docs/src/components/: AppHeader.vue
docs/src/views/: HomePage.vue  LoginPage.vue
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
src/main/java/io/github/freitaseric/sudoplayer/: SudoPlayerBot.java
src/main/java/io/github/freitaseric/sudoplayer/commands/: PingCommand.java
src/main/java/io/github/freitaseric/sudoplayer/interfaces/: ICommand.java  IEvent.java
src/main/java/io/github/freitaseric/sudoplayer/managers/: CommandManager.java  EventManager.java  PresenceManager.java
src/main/java/io/github/freitaseric/sudoplayer/utils/: ClassLoader.java
sudoplayer/: __init__.py  bot.py
sudoplayer/app/cogs/: general.py  steam.py
sudoplayer/app/database/: cache.py
sudoplayer/app/services/: __init__.py  currency.py  steam.py
sudoplayer/app/views/: __init__.py  steam_app_list.py
sudoplayer/cogs/: general.py  steam.py
sudoplayer/config/: colors.py  emojis.py  env.py
sudoplayer/core/: __init__.py  bot.py  env.py
sudoplayer/core/constants/: __init__.py  time.py
sudoplayer/lib/: currency.py  log.py  redis.py  steam.py
sudoplayer/utils/: __init__.py  embeds.py
sudoplayer/views/: steam_app_list.py
(+12 files in other folders)
